<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thathustudio.spage.activities.RoomActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/crdV_opponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/half_spacing"
        android:layout_marginLeft="@dimen/half_spacing"
        android:layout_marginRight="@dimen/half_spacing"
        android:layout_marginStart="@dimen/half_spacing"
        android:layout_marginTop="@dimen/half_spacing"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtV_opponentName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="@dimen/dialog_spacing"
                android:paddingEnd="@dimen/spacing"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                android:paddingStart="@dimen/spacing"
                android:paddingTop="@dimen/dialog_spacing"
                android:text="@string/waiting_for_player"
                android:textColor="@color/primaryTextDark"
                android:textSize="@dimen/headline_text_size"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtV_opponentScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F44336"
                android:gravity="center"
                android:paddingBottom="@dimen/dialog_spacing"
                android:paddingTop="@dimen/dialog_spacing"
                android:textColor="@color/primaryTextLight"
                android:textSize="@dimen/headline_text_size"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/crdV_self"
        android:layout_below="@id/crdV_opponent"
        android:layout_centerInParent="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/half_spacing"
            android:paddingTop="@dimen/half_spacing"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <android.support.v7.widget.CardView
                android:id="@+id/crdV_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_spacing"
                android:layout_marginLeft="@dimen/half_spacing"
                android:layout_marginRight="@dimen/half_spacing"
                android:layout_marginStart="@dimen/half_spacing"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtV_questionContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing"
                        android:textColor="@color/primaryTextLight"
                        android:textSize="@dimen/subheading_text_size"/>

                    <RadioGroup
                        android:id="@+id/rdG_choices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rdBtn_choiceA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/half_spacing"
                            android:minHeight="@dimen/button_height"
                            android:paddingEnd="@dimen/half_spacing"
                            android:paddingLeft="@dimen/half_spacing"
                            android:paddingRight="@dimen/half_spacing"
                            android:paddingStart="@dimen/half_spacing"
                            android:textColor="@color/primaryTextDark"
                            android:textSize="@dimen/body_text_size"
                            android:theme="@style/RadioButton"/>

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rdBtn_choiceB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/quarter_spacing"
                            android:layout_marginTop="@dimen/quarter_spacing"
                            android:minHeight="@dimen/button_height"
                            android:paddingEnd="@dimen/half_spacing"
                            android:paddingLeft="@dimen/half_spacing"
                            android:paddingRight="@dimen/half_spacing"
                            android:paddingStart="@dimen/half_spacing"
                            android:textColor="@color/primaryTextDark"
                            android:textSize="@dimen/body_text_size"
                            android:theme="@style/RadioButton"/>

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rdBtn_choiceC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/quarter_spacing"
                            android:layout_marginTop="@dimen/quarter_spacing"
                            android:minHeight="@dimen/button_height"
                            android:paddingEnd="@dimen/half_spacing"
                            android:paddingLeft="@dimen/half_spacing"
                            android:paddingRight="@dimen/half_spacing"
                            android:paddingStart="@dimen/half_spacing"
                            android:textColor="@color/primaryTextDark"
                            android:textSize="@dimen/body_text_size"
                            android:theme="@style/RadioButton"/>

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rdBtn_choiceD"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/half_spacing"
                            android:minHeight="@dimen/button_height"
                            android:paddingEnd="@dimen/half_spacing"
                            android:paddingLeft="@dimen/half_spacing"
                            android:paddingRight="@dimen/half_spacing"
                            android:paddingStart="@dimen/half_spacing"
                            android:textColor="@color/primaryTextDark"
                            android:textSize="@dimen/body_text_size"
                            android:theme="@style/RadioButton"/>

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </ScrollView>

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@id/crdV_self"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lnLyot_ctrl"
        android:layout_marginBottom="@dimen/half_spacing"
        android:layout_marginEnd="@dimen/half_spacing"
        android:layout_marginLeft="@dimen/half_spacing"
        android:layout_marginRight="@dimen/half_spacing"
        android:layout_marginStart="@dimen/half_spacing"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="@dimen/dialog_spacing"
                android:paddingEnd="@dimen/zero"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/zero"
                android:paddingStart="@dimen/spacing"
                android:paddingTop="@dimen/dialog_spacing"
                android:text="@string/you"
                android:textColor="@color/primaryTextDark"
                android:textSize="@dimen/headline_text_size"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtV_selfScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:gravity="center"
                android:paddingBottom="@dimen/dialog_spacing"
                android:paddingTop="@dimen/dialog_spacing"
                android:textColor="@color/primaryTextLight"
                android:textSize="@dimen/headline_text_size"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@id/lnLyot_ctrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/half_spacing"
            android:layout_marginRight="@dimen/half_spacing"
            android:background="?attr/selectableItemBackground"
            android:minWidth="88dp"
            android:paddingEnd="@dimen/half_spacing"
            android:paddingLeft="@dimen/half_spacing"
            android:paddingRight="@dimen/half_spacing"
            android:paddingStart="@dimen/half_spacing"
            android:text="@string/next"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/body_text_size"
            android:theme="@style/FlatButton"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtV_duelNotification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@id/lnLyot_ctrl"
        android:background="@android:color/white"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/half_spacing"
        android:text="@string/wait_for_your_opponent"
        android:textColor="@color/primaryTextDark"
        android:textSize="@dimen/subheading_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_alignTop="@id/lnLyot_ctrl"
        android:background="@color/dividerDark"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtV_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/spacing"
        android:textColor="@color/secondaryTextDark"
        android:textSize="@dimen/display3_text_size"
        android:visibility="gone"/>

</RelativeLayout>
